--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
-    "moduleResolution": "node"
-  }
+    "moduleResolution": "node",
+    "strictNullChecks": true
+  },
+  "include": ["src/**/*", "custom.d.ts"]
 }
