--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "build": "webpack",
     "preview": "webpack serve",
     "deploy": "gh-pages -d dist"
@@ -13,11 +13,13 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.17.0",
+    "@types/jest": "^29.5.14",
     "autoprefixer": "^10.4.20",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "eslint": "^9.17.0",
@@ -25,6 +27,7 @@
     "globals": "^15.14.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
+    "jest": "^29.7.0",
     "postcss": "^8.4.49",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.17",
