--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "postcss": "^8.4.49",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.17",
     "ts-loader": "^9.5.1",
